src/test/ui/parser/pat-lt-bracket-3.stderr
error: expected one of `=>`, `@`, `if`, or `|`, found `<`
  --> $DIR/pat-lt-bracket-3.rs:16:16
   |
LL |             Foo<T>(x, y) => {
   |                ^ expected one of `=>`, `@`, `if`, or `|` here

error[E0601]: `main` function not found in crate `pat_lt_bracket_3`
   |
   = note: consider adding a `main` function to `$DIR/pat-lt-bracket-3.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
